--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -1,5 +1,25 @@
-<h1>Editing Lesson</h1>
+<div class="container-fluid">
 
-<%= render 'form' %>
+	<div class="row">
+		<div class="col-sm-2">
+			<ul class="breadcrumb">
+				<li><a href="#">Home</a></li>
+				<li><a href="#"><%= link_to @course.coursename, course_path(@course) %></a></li>
+			</ul>
+		</div>
+		<div class="col-sm-8">
+			<h1 class="text-center">Editing lesson</h1>
+		</div>
+	</div>
+	<div class="row">
 
-<%= link_to 'Back', course_path %>
+		<div class="col-sm-2 sidebar-offcanvas" id="sidebar" role="navigation">
+		    <%= render 'sidebar' %>
+		</div>
+
+		<%= render partial: 'form' %>
+		
+	</div>
+
+</div>
+
