--- a/app/views/lessons/new.html.erb
+++ b/app/views/lessons/new.html.erb
@@ -1,8 +1,24 @@
-<h1 class="text-center">New Lesson</h1>
+<div class="container-fluid">
 
-<div class="col-sm-2">
-	<%= render partial: 'sidebar' %>
+	<div class="row">
+		<div class="col-sm-2">
+			<ul class="breadcrumb">
+				<li><a href="#">Home</a></li>
+				<li><a href="#"><%= link_to @course.coursename, course_path(@course) %></a></li>
+			</ul>
+		</div>
+		<div class="col-sm-8">
+			<h1 class="text-center">New Lesson</h1>
+		</div>
+	</div>
+	<div class="row">
+
+		<div class="col-sm-2 sidebar-offcanvas" id="sidebar" role="navigation">
+		    <%= render 'sidebar' %>
+		</div>
+
+		<%= render partial: 'form' %>
+		
+	</div>
+
 </div>
-
-<%= render partial: 'form' %>
-
