--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -1,13 +1,27 @@
-<p id="notice"><%= notice %></p>
+<p class="text-center" id="notice"><strong><%= notice %></strong></p>
+<div class="container-fluid">
 
-<h1 class="text-center"><%= @lesson.title %></h1>
+	<div class="row">
+		<div class="col-sm-4">
+			<%= render 'breadcrumb' %>
+		</div>
+		<div class="col-sm-12">
+			<h1 class="text-center"><%= @lesson.title %></h1>
+		</div>
+	</div>
+	<div class="row">
 
-<div class="col-sm-2 sidebar-offcanvas" id="sidebar" role="navigation">
-    <%= render 'sidebar' %>
+		<div class="col-sm-2 sidebar-offcanvas" id="sidebar" role="navigation">
+		    <%= render 'sidebar' %>
+		</div>
+
+		<div class="col-sm-9">
+			<%=raw @lesson.body %>
+		</div>
+
+		</div>
+
 </div>
 
-<div class="col-sm-9">
-	<%=raw @lesson.body %>
-</div>
 
 
