--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -12,71 +12,90 @@
     <h1 class="text-center"><%= current_user.first_name %> <%= current_user.last_name %></h1>
   </div>
   <div class="row">
-    <div class="col-sm-6 text-center">
-      <h2>Your profile</h2>
-    <table class="table table-striped table-hover ">
-        <tbody>
-          <tr>
-            <td><strong>Name</strong></td>
-            <td><%= current_user.first_name %></td>
-          </tr>
-          <tr class="info">
-            <td><strong>Last name</strong></td>
-            <td><%= current_user.last_name %></td>
-          </tr>
-          <tr>
-            <td><strong>Username</strong></td>
-            <td><%= current_user.username %></td>
-          </tr>
-          <tr class="info">
-            <td><strong>Email</strong></td>
-            <td><%= current_user.email %></td>
-          </tr>
-          <tr>
-            <td><strong>Address</strong></td>
-            <td><%= current_user.address %></td>
-          </tr>
-          <tr class="info">
-            <td><strong>City</strong></td>
-            <td><%= current_user.city %></td>
-          </tr>
-          <tr>
-            <td><strong>Country</strong></td>
-            <td><%= current_user.country %></td>
-          </tr>
-          <tr class="info">
-            <td><strong>Phone</strong></td>
-            <td><%= current_user.phone %></td>
-          </tr>
-          <% if current_user.company && current_user.employment != nil %>
-          <tr>
-            <td><strong>Company</strong></td>
-            <td><%= current_user.company %></td>
-          </tr>
-          <tr class="info">
-          <td><strong>Employment</strong></td>
-            <td><%= current_user.employment %></td>
-          </tr>
-          <% end %>
-        </tbody>
-    </table> 
+    <div class="col-sm-6">
+      <div class="panel panel-primary text-center">
+        <div class="panel-heading">
+          <h2 class="panel-title">Your profile</h2>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped table-hover">
+            <tbody>
+              <tr>
+                <td><strong>Name</strong></td>
+                <td><%= current_user.first_name %></td>
+              </tr>
+              <tr>
+                <td><strong>Last name</strong></td>
+                <td><%= current_user.last_name %></td>
+              </tr>
+              <tr>
+                <td><strong>Username</strong></td>
+                <td><%= current_user.username %></td>
+              </tr>
+              <tr>
+                <td><strong>Email</strong></td>
+                <td><%= current_user.email %></td>
+              </tr>
+              <tr>
+                <td><strong>Address</strong></td>
+                <td><%= current_user.address %></td>
+              </tr>
+              <tr>
+                <td><strong>City</strong></td>
+                <td><%= current_user.city %></td>
+              </tr>
+              <tr>
+                <td><strong>Country</strong></td>
+                <td><%= current_user.country %></td>
+              </tr>
+              <tr>
+                <td><strong>Phone</strong></td>
+                <td><%= current_user.phone %></td>
+              </tr>
+              <% if current_user.company && current_user.employment != nil %>
+              <tr>
+                <td><strong>Company</strong></td>
+                <td><%= current_user.company %></td>
+              </tr>
+              <tr>
+              <td><strong>Employment</strong></td>
+                <td><%= current_user.employment %></td>
+              </tr>
+              <% end %>
+            </tbody>
+        </table>
+      </div>
+      </div> 
     </div>
     <div class="col-sm-6 text-center">
-      <h2>Your courses</h2>
-      <% if @usercourse %>
-       <table class="table table-striped table-hover ">
-        <tbody>
-          <tr><% @usercourse.each do |enrollment| %>
-            <td><%= link_to "#{enrollment.course.coursename}", course_path(enrollment.course_id) %></td>
-          </tr><% end %>
-          <% else %>
-          <tr>
-            <td>You are not enrolled in any course yet :(</td>
-          </tr>
-        </tbody>
-       </table>
-      <% end %>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h2 class="panel-title">Your courses</h2>
+        </div>
+        <div class="panel-body">
+          <% if current_user.admin? == true %>
+           <table class="table table-striped table-hover ">
+            <tbody>
+              <tr><% @courses.each do |course| %>
+                <td><%= link_to "#{course.coursename}", course_path(course) %></td>
+              </tr><% end %>
+            </tbody>
+          <% end %>
+          <% if @usercourse %>
+           <table class="table table-striped table-hover ">
+            <tbody>
+              <tr><% @usercourse.each do |enrollment| %>
+                <td><%= link_to "#{enrollment.course.coursename}", course_path(enrollment.course_id) %></td>
+              </tr><% end %>
+              <% else %>
+              <tr>
+                <td>You are not enrolled in any course yet :(</td>
+              </tr>
+            </tbody>
+           </table>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-
