--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -8,7 +8,7 @@
 			</ul>
 		</div>
 		<div class="col-sm-8">
-			<h1 class="text-center">New Survey</h1>
+			<h1 class="text-center">Add Survey</h1>
 		</div>
 	</div>
 	<div class="row">
