--- a/app/views/courses/_sidebar.html.erb
+++ b/app/views/courses/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-stacked">
 <% if @course.lessons %>
-    <% @course.lessons.each do |lesson| %>
+    <% @ordered_lessons.each do |lesson| %>
     	<li class="nav-item"><%= link_to "#{lesson.title}", course_lesson_path(@course, lesson) %></li>
     <% end %>
     <% if current_user.admin? || current_user.teacher? == true %>
